crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__error__error_named__named_invalid.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUN-SUNN",
                    Tag,
                ),
                Nom(
                    "SUN-SUNN",
                    Alt,
                ),
                Nom(
                    "SUN-SUNN",
                    Alt,
                ),
                Nom(
                    "SUN-SUNN",
                    Alt,
                ),
            ],
        },
    ),
)
